--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -1,7 +1,7 @@
 {
   "loginForm": {
     "greetings": "Ласкаво просимо!",
-    "loginButton": "Ввійти",
+    "loginButton": "Увійти",
     "forgotPass": "Забув пароль",
     "rememberMe": "Запам'ятати мене",
     "userName": "Ваш Email",
