--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -16,5 +16,10 @@
     "forgotButton":  "Отправить новый пароль на Email",
     "backToLogin": "Вернуться на страницу входа",
     "sentMessageEmail": "Сообщение с новым паролем отправлено вам на почту"
+  },
+  "sidebar": {
+    "vacancies": "Актуальные вакансии",
+    "handbooks": "Справочники",
+    "matrices": "Матрицы"
   }
 }
