--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -16,5 +16,10 @@
     "forgotButton":  "Надіслати новий пароль на Email",
     "backToLogin": "Повернутися на сторінку входу",
     "sentMessageEmail": "Повідомлення з новим паролем надіслано вам на пошту"
+  },
+  "sidebar": {
+    "vacancies": "Актуальні вакансії",
+    "handbooks": "Довідники",
+    "matrices": "Матриці"
   }
 }
