positions table header

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,5 +21,13 @@
     "vacancies": "Actual vacancies",
     "handbooks": "Handbooks",
     "matrices": "Matrices"
+  },
+  "positions": {
+    "tableHead": {
+      "position": "Position",
+      "stcw": "STCW",
+      "department": "Department",
+      "abbreviation": "Abbreviation"
+    }
   }
 }
